--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "@tanstack/react-virtual": "^3.13.12",
+    "@xenova/transformers": "^2.17.2",
     "bcryptjs": "^2.4.3",
     "chromadb": "^3.1.1",
     "cross-env": "^10.1.0",
