--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -101,3 +101,42 @@ CMD ["sh", "-c", "\
   pnpm --filter prisma seed && \
   pnpm --filter background-jobs start \
 "]
+
+
+FROM base AS development
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3=3.11.* \
+    python3-venv \
+    python3-pip \
+    build-essential \
+    cmake \
+    libopenblas-dev \
+    liblapack-dev \
+    libx11-dev \
+    libgtk-3-dev \
+    libboost-all-dev \
+    ffmpeg \
+    && ln -sf /usr/bin/python3 /usr/bin/python \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
+
+
+COPY --from=builder  /app /app
+
+ENV NODE_ENV=development \
+    PATH="/app/.venv/bin:$PATH" \
+    VIRTUAL_ENV="/app/.venv" 
+
+RUN  pnpm --filter background-jobs build
+
+WORKDIR /app/
+
+EXPOSE 4000 8765
+
+CMD ["sh", "-c", "\
+  pnpm --filter prisma migrate deploy && \
+  pnpm --filter prisma generate && \
+  pnpm --filter prisma seed && \
+  pnpm --filter background-jobs dev \
+"]
