--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -86,3 +86,47 @@ CMD ["sh", "-c", "\
   pnpm --filter prisma seed && \
   pnpm --filter web start \
 "]
+
+
+
+FROM base AS development
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    openssl \
+    ca-certificates \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY --from=builder /app/pnpm-workspace.yaml /app/
+COPY --from=builder /app/pnpm-lock.yaml /app/
+COPY --from=builder /app/package.json /app/
+COPY --from=builder /app/prisma.config.ts /app/
+
+COPY --from=builder /app/apps/web/package.json /app/apps/web/
+COPY --from=builder /app/apps/background-jobs/package.json /app/apps/background-jobs/
+COPY --from=builder /app/packages/shared/package.json /app/packages/shared/
+COPY --from=builder /app/packages/prisma/package.json /app/packages/prisma/
+
+COPY --from=builder /app/packages/prisma /app/packages/prisma
+
+COPY --from=builder /app/packages/shared/dist /app/packages/shared/dist
+
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
+    pnpm install --frozen-lockfile
+
+COPY --from=builder /app/apps/web/build /app/apps/web/build
+
+WORKDIR /app
+
+ENV NODE_ENV=development
+ENV PORT=3745
+ENV HOST=0.0.0.0
+
+EXPOSE 3745
+
+CMD ["sh", "-c", "\
+  pnpm --filter prisma migrate deploy && \
+  pnpm --filter prisma generate && \
+  pnpm --filter prisma seed && \
+  pnpm --filter web start \
+"]
