--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -83,7 +83,18 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean
 
 
-COPY --from=builder  /app /app
+COPY --from=builder /app/pnpm-workspace.yaml /app/
+COPY --from=builder /app/pnpm-lock.yaml /app/
+COPY --from=builder /app/package.json /app/
+COPY --from=builder /app/prisma.config.ts /app/
+
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/packages ./packages
+
+COPY --from=builder /app/apps/background-jobs ./apps/background-jobs
+
+COPY --from=builder /app/.venv ./.venv
+
 
 ENV NODE_ENV=production \
     PATH="/app/.venv/bin:$PATH" \
