--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -4,6 +4,8 @@ numpy>=1.24.0,<2.0.0
 tqdm>=4.66.0
 
 # ML/AI frameworks 
+--index-url https://download.pytorch.org/whl/cpu
+--extra-index-url https://pypi.org/simple
 torch>=2.1.0
 torchvision>=0.16.0
 ultralytics>=8.0.0
