--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,7 +28,8 @@ services:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
       - whisper-models:/app/models:rw
       - yolo-models:/app/models/yolo:rw
-
+    platforms:
+        - linux/amd64  
   web:
     build:
       context: ..
