fix: update docker file web

--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -53,24 +53,28 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /app/pnpm-workspace.yaml /app/
-COPY --from=builder /app/pnpm-lock.yaml /app/
-COPY --from=builder /app/package.json /app/
-COPY --from=builder /app/prisma.config.ts /app/
+WORKDIR /app
 
-COPY --from=builder /app/apps/web/package.json /app/apps/web/
-COPY --from=builder /app/apps/background-jobs/package.json /app/apps/background-jobs/
-COPY --from=builder /app/packages/shared/package.json /app/packages/shared/
-COPY --from=builder /app/packages/prisma/package.json /app/packages/prisma/
+COPY --from=builder /app/pnpm-workspace.yaml ./
+COPY --from=builder /app/pnpm-lock.yaml ./
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/prisma.config.ts ./
 
-COPY --from=builder /app/packages/prisma /app/packages/prisma
+COPY --from=builder /app/apps/web/package.json ./apps/web/
+COPY --from=builder /app/apps/background-jobs/package.json ./apps/background-jobs/
+COPY --from=builder /app/packages/shared/package.json ./packages/shared/
+COPY --from=builder /app/packages/prisma/package.json ./packages/prisma/
 
-COPY --from=builder /app/packages/shared/dist /app/packages/shared/dist
+COPY --from=builder /app/packages/prisma ./packages/prisma
+
+COPY --from=builder /app/packages/shared/dist ./packages/shared/dist
+COPY --from=builder /app/packages/shared/package.json ./packages/shared/
 
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
     pnpm install --frozen-lockfile
 
-COPY --from=builder /app/apps/web /app/apps/web
+COPY --from=builder /app/apps/web/build ./apps/web/build
+
 
 WORKDIR /app
 
