--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -5,15 +5,15 @@ FROM node:${NODE_VERSION}-bookworm-slim AS base
 
 ARG PNPM_VERSION
 
-ENV PNPM_HOME="/pnpm"
+ENV PNPM_HOME="/pnpm" 
 ENV PATH="$PNPM_HOME:$PATH"
 RUN corepack enable && corepack prepare pnpm@${PNPM_VERSION} --activate
 
 WORKDIR /app
 
-RUN mkdir -p /app/models /app/models/yolo /tmp 
+RUN mkdir -p /app/models /app/models/yolo /tmp
 
-FROM base AS builder
+FROM base AS python-base
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3=3.11.* \
@@ -31,21 +31,33 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
+
+FROM base AS node-deps
+
 COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
 COPY apps/background-jobs/package.json ./apps/background-jobs/
 COPY apps/web/package.json ./apps/web/
 COPY packages/shared/package.json ./packages/shared/
 COPY packages/prisma ./packages/prisma/
+
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
-    pnpm install --frozen-lockfile
+    pnpm install --frozen-lockfile 
+
+
+FROM python-base AS python-deps
+
+RUN python3 -m venv /app/.venv
+ENV PATH="/app/.venv/bin:$PATH" \
+    VIRTUAL_ENV="/app/.venv"
 
 COPY python/requirements.txt ./python/
-RUN python3 -m venv /app/.venv
-ENV PATH="/app/.venv/bin:$PATH"
-ENV VIRTUAL_ENV="/app/.venv"
+
 RUN --mount=type=cache,target=/root/.cache/pip \
     pip install --no-cache-dir -r python/requirements.txt
 
+FROM node-deps AS builder
+
+COPY --from=node-deps ./app/node_modules /app/node_modules
 COPY apps ./apps
 COPY packages ./packages
 COPY python ./python
@@ -74,6 +86,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean
 
 COPY --from=builder /app /app
+COPY --from=python-deps  ./app/.venv  /app/.venv
+COPY --from=python-deps  ./app/python  /app/python
 
 ENV NODE_ENV=production \
     PATH="/app/.venv/bin:$PATH" \
@@ -95,7 +109,7 @@ FROM builder AS development
 
 ENV NODE_ENV=development \
     PATH="/app/.venv/bin:$PATH" \
-    VIRTUAL_ENV="/app/.venv" 
+    VIRTUAL_ENV="/app/.venv"
 
 RUN  pnpm --filter background-jobs build
 
