fix: update python background host

--- a/.env.system.example
+++ b/.env.system.example
@@ -18,6 +18,7 @@ IS_PERSISTENT="TRUE"
 
 
 # PYTHON ANALYSIS SERVICE
+PYTHON_HOST="background-jobs"
 PYTHON_PORT="8765"
 PYTHON_SCRIPT="/app/python/analysis_service.py"
 VENV_PATH="/app/.venv"
