--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,9 @@ jobs:
           - name: web
             dockerfile: docker/Dockerfile.web
             context: .
+        platform:
+          - linux/amd64
+          - linux/arm64
     
     steps:
       - name: Checkout code
@@ -55,7 +58,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: ${{ matrix.platform }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -71,17 +74,22 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Generate platform tag
+        id: platform-tag
+        run: |
+          PLATFORM_TAG=$(echo "${{ matrix.platform }}" | sed 's/\//-/g')
+          echo "tag=${PLATFORM_TAG}" >> $GITHUB_OUTPUT
+
       - name: Extract metadata (tags, labels)
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service.name }}
           tags: |
-            type=raw,value=latest,enable={{is_default_branch}}
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
-
+            type=raw,value=latest-${{ steps.platform-tag.outputs.tag }},enable={{is_default_branch}}
+            type=semver,pattern={{version}}-${{ steps.platform-tag.outputs.tag }}
+            type=semver,pattern={{major}}.{{minor}}-${{ steps.platform-tag.outputs.tag }}
+            type=sha,prefix={{branch}}-${{ steps.platform-tag.outputs.tag }}-
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         id: push
