--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -53,7 +53,11 @@ ENV PATH="/app/.venv/bin:$PATH" \
 COPY python/requirements.txt ./python/
 
 RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --upgrade pip setuptools wheel
+
+RUN --mount=type=cache,target=/root/.cache/pip \
     pip install --no-cache-dir -r python/requirements.txt 
+
 
 FROM node-deps AS builder
 
@@ -72,15 +76,18 @@ FROM base AS production
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3=3.11.* \
     python3-venv \
-    python3-pip \
-    build-essential \
-    cmake \
-    libopenblas-dev \
-    liblapack-dev \
-    libx11-dev \
-    libgtk-3-dev \
-    libboost-all-dev \
+    libopenblas0 \
+    liblapack3 \
+    libx11-6 \
+    libgtk-3-0 \
+    libboost-python1.74.0 \
+    libboost-thread1.74.0 \
+    libboost-filesystem1.74.0 \
     ffmpeg \
+    libsm6 \
+    libxext6 \
+    libxrender1 \
+    libgomp1 \
     && ln -sf /usr/bin/python3 /usr/bin/python \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
