--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -13,7 +13,21 @@ WORKDIR /app
 
 RUN mkdir -p /app/models /app/models/yolo /tmp
 
-FROM base AS python-base
+
+
+FROM base AS node-deps
+
+COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
+COPY apps/background-jobs/package.json ./apps/background-jobs/
+COPY apps/web/package.json ./apps/web/
+COPY packages/shared/package.json ./packages/shared/
+COPY packages/prisma ./packages/prisma/
+
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
+    pnpm install --frozen-lockfile 
+
+
+FROM base AS python-deps
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3=3.11.* \
@@ -32,20 +46,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean
 
 
-FROM base AS node-deps
-
-COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
-COPY apps/background-jobs/package.json ./apps/background-jobs/
-COPY apps/web/package.json ./apps/web/
-COPY packages/shared/package.json ./packages/shared/
-COPY packages/prisma ./packages/prisma/
-
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
-    pnpm install --frozen-lockfile 
-
-
-FROM python-base AS python-deps
-
 RUN python3 -m venv /app/.venv
 ENV PATH="/app/.venv/bin:$PATH" \
     VIRTUAL_ENV="/app/.venv"
@@ -56,7 +56,10 @@ RUN --mount=type=cache,target=/root/.cache/pip \
     pip install --upgrade pip setuptools wheel
 
 RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install --no-cache-dir -r python/requirements.txt 
+    pip install face-recognition
+
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install -r python/requirements.txt 
 
 
 FROM node-deps AS builder
