fix: update workflow condition for push

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,6 +93,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         id: push
+        if: github.event_name != 'pull_request'
         with:
           context: ${{ matrix.service.context }}
           file: ${{ matrix.service.dockerfile }}
